--- a/index.html
+++ b/index.html
@@ -1,69 +1,71 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>簡介</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+    <title>簡介</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-					</header>
+<body class="is-preload">
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">簡介</a></li>
-							<li><a href="2.html">人物介紹</a></li>
-							<li><a href="3.html">故事</a></li>
-							<!-- <li><a href="#cta">Get Started</a></li> -->
-						</ul>
-					</nav>
+    <!-- Wrapper -->
+    <div id="wrapper">
 
-				<!-- Main -->
-					<div id="main">
+        <!-- Header -->
+        <header id="header" class="alt">
+        </header>
 
-						<!-- Introduction -->
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>魔女的考驗</h2>
-										</header>
-										<p>《魔女的考驗》（日語：シュガシュガルーン，英語：Sugar Sugar Rune）是由日本漫畫家安野夢洋子所畫的少女漫畫作品，於《Nakayoshi》雜誌上連載，曾獲第29回講談社漫畫賞[1]。這部作品亦改編成電視動畫，在日本、台灣、香港等地播放。</p>
-										<!-- <ul class="actions">
+        <!-- Nav -->
+        <nav id="nav">
+            <ul>
+                <li><a href="index.html">簡介</a></li>
+                <li><a href="2.html">人物介紹</a></li>
+                <li><a href="3.html">故事</a></li>
+                <!-- <li><a href="#cta">Get Started</a></li> -->
+            </ul>
+        </nav>
+
+        <!-- Main -->
+        <div id="main">
+
+            <!-- Introduction -->
+            <section id="intro" class="main">
+                <div class="spotlight">
+                    <div class="content">
+                        <header class="major">
+                            <h2>魔女的考驗</h2>
+                        </header>
+                        <p>《魔女的考驗》（日語：シュガシュガルーン，英語：Sugar Sugar Rune）是由日本漫畫家安野夢洋子所畫的少女漫畫作品，於《Nakayoshi》雜誌上連載，曾獲第29回講談社漫畫賞。這部作品亦改編成電視動畫，在日本、台灣、香港等地播放。</p>
+                        <!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
-									</div>
-									<span class="image"><a href="https://imgur.com/vSgcRFg"><img src="https://i.imgur.com/vSgcRFg.jpg" title=" " /></a></span>
-								</div>
-							</section>
+                    </div>
+                    <span class="image"><a href="https://imgur.com/vSgcRFg"><img src="https://i.imgur.com/vSgcRFg.jpg" title=" " /></a></span>
+                </div>
+            </section>
 
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>作者</h2>
-										</header>
-										<p>安野夢洋子（安野モヨコ，1971年3月26日－）
-										<br />
-										是日本漫畫家、khara工作室董事。出生於東京都杉並區，成長於東京都多摩市。O型血。畢業於關東高中（現為聖德學園高中）。高中三年級時出道，陸續推出多部作品，已有數部動畫化或真人化。丈夫是知名的動畫導演庵野秀明。</p>
-										<!-- <ul class="actions">
+            <section id="intro" class="main">
+                <div class="spotlight">
+                    <div class="content">
+                        <header class="major">
+                            <h2>作者</h2>
+                        </header>
+                        <p>安野夢洋子（安野モヨコ，1971年3月26日－）
+                            <br /> 是日本漫畫家、khara工作室董事。出生於東京都杉並區，成長於東京都多摩市。O型血。畢業於關東高中（現為聖德學園高中）。高中三年級時出道，陸續推出多部作品，已有數部動畫化或真人化。丈夫是知名的動畫導演庵野秀明。
+                        </p>
+                        <!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
-									</div>
-									<span class="image"><a href="https://imgur.com/KuqMHxa"><img src="https://i.imgur.com/KuqMHxa.jpg" title="source: imgur.com" /></a></span>
-								</div>
-							</section>
+                    </div>
+                    <span class="image"><a href="https://imgur.com/KuqMHxa"><img src="https://i.imgur.com/KuqMHxa.jpg" title="source: imgur.com" /></a></span>
+                </div>
+            </section>
 
-						<!-- First Section -->
-							<!-- <section id="first" class="main special">
+            <!-- First Section -->
+            <!-- <section id="first" class="main special">
 								<header class="major">
 									<h2>Magna veroeros</h2>
 								</header>
@@ -91,8 +93,8 @@
 								</footer>
 							</section> -->
 
-						<!-- Second Section -->
-							<!-- <section id="second" class="main special">
+            <!-- Second Section -->
+            <!-- <section id="second" class="main special">
 								<header class="major">
 									<h2>Ipsum consequat</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
@@ -128,24 +130,23 @@
 								</footer>
 							</section> -->
 
-						<!-- Get Started
-							<section id="cta" class="main special">
-								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section> -->
+            <!-- Get Started
+            <section id="cta" class="main special">
+                <header class="major">
+                    <h2>Congue imperdiet</h2>
+                    <p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br /> posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+                </header>
+                <footer class="major">
+                    <ul class="actions special">
+                        <li><a href="generic.html" class="button primary">Get Started</a></li>
+                        <li><a href="generic.html" class="button">Learn More</a></li>
+                    </ul>
+                </footer>
+            </section> -->
 
-					</div>
+        </div>
 
-				<!-- Footer
+        <!-- Footer
 					<footer id="footer">
 						<section>
 							<h2>Aliquam sed mauris</h2>
@@ -175,9 +176,9 @@
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer> -->
 
-			</div>
+    </div>
 
-		<!-- Scripts
+    <!-- Scripts
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -186,5 +187,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script> -->
 
-	</body>
+</body>
+
 </html>
