--- a/3.html
+++ b/3.html
@@ -1,54 +1,56 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>故事</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+    <title>故事</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-					</header>
+<body class="is-preload">
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">簡介</a></li>
-							<li><a href="2.html">人物介紹</a></li>
-							<li><a href="3.html">故事</a></li>
-							<!-- <li><a href="#cta">Get Started</a></li> -->
-						</ul>
-					</nav>
+    <!-- Wrapper -->
+    <div id="wrapper">
 
-				<!-- Main -->
-					<div id="main">
+        <!-- Header -->
+        <header id="header" class="alt">
+        </header>
 
-						<!-- Introduction -->
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>故事大綱</h2>
-										</header>
-										<p>居住在魔界的兩個少女—巧克莉及香草，不僅是好朋友，同時也是下一任魔界女王的候選人。她們以競爭對手的身分到了人間，比賽誰能夠收集最多人類的愛心，也就是將人們對她們的各種心情，化為心的結晶。蒐集最高價值結晶的人，將成為下一任魔界女王。
+        <!-- Nav -->
+        <nav id="nav">
+            <ul>
+                <li><a href="index.html">簡介</a></li>
+                <li><a href="2.html">人物介紹</a></li>
+                <li><a href="3.html">故事</a></li>
+                <!-- <li><a href="#cta">Get Started</a></li> -->
+            </ul>
+        </nav>
 
-											原本在魔界大受歡迎的巧克莉，以及在魔界毫不起眼的香草，到了人類世界之後，受歡迎程度卻完全逆轉，使巧克莉陷入了困境。同時巧克莉對來歷不明的少年皮耶爾一見鍾情，而她魔女的心被他吸引。據說魔女的心，每個魔女都只擁有一顆。一旦被奪走，就會永遠失去靈魂，陷入無止盡的黑暗。巧克莉是否能夠守護她的心？也是否能通過艱巨的女王測驗，完成自己從小的夢想？同時，魔界反派種族—歐葛爾打算佔領整個魔界，並向兩位女王候選人下手，巧克莉及香草能否對抗歐葛爾？巧克莉能否和皮耶爾在一起？魔界女王將由誰來擔任呢？</p>
-										<!-- <ul class="actions">
+        <!-- Main -->
+        <div id="main">
+
+            <!-- Introduction -->
+            <section id="intro" class="main">
+                <div class="spotlight">
+                    <div class="content">
+                        <header class="major">
+                            <h2>故事大綱</h2>
+                        </header>
+                        <p>居住在魔界的兩個少女—巧克莉及香草，不僅是好朋友，同時也是下一任魔界女王的候選人。她們以競爭對手的身分到了人間，比賽誰能夠收集最多人類的愛心，也就是將人們對她們的各種心情，化為心的結晶。蒐集最高價值結晶的人，將成為下一任魔界女王。 原本在魔界大受歡迎的巧克莉，以及在魔界毫不起眼的香草，到了人類世界之後，受歡迎程度卻完全逆轉，使巧克莉陷入了困境。同時巧克莉對來歷不明的少年皮耶爾一見鍾情，而她魔女的心被他吸引。據說魔女的心，每個魔女都只擁有一顆。一旦被奪走，就會永遠失去靈魂，陷入無止盡的黑暗。巧克莉是否能夠守護她的心？也是否能通過艱巨的女王測驗，完成自己從小的夢想？同時，魔界反派種族—歐葛爾打算佔領整個魔界，並向兩位女王候選人下手，巧克莉及香草能否對抗歐葛爾？巧克莉能否和皮耶爾在一起？魔界女王將由誰來擔任呢？
+
+                        </p>
+                        <!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
-									</div>
-									<span class="image"><a href="https://imgur.com/mbT25ZK"><img src="https://i.imgur.com/mbT25ZK.jpg" title="source: imgur.com" /></a></span>
-								</div>
-							</section>
+                    </div>
+                    <span class="image"><a href="https://imgur.com/mbT25ZK"><img src="https://i.imgur.com/mbT25ZK.jpg" title="source: imgur.com" /></a></span>
+                </div>
+            </section>
 
-						<!-- First Section -->
-							<!-- <section id="first" class="main special">
+            <!-- First Section -->
+            <!-- <section id="first" class="main special">
 								<header class="major">
 									<h2>Magna veroeros</h2>
 								</header>
@@ -76,62 +78,61 @@
 								</footer>
 							</section> -->
 
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>愛心點數</h2>
-									<p>基於特定感情產生對應顏色的「心」。
-										<br />
-										人類的「心」則會不斷再生，魔法師會將人類對自己產生感情的「心」收集起來，而女王考試便以獲得「心」的累積點數多寡決定女王繼承權。「心」的顏色不同，點數也不同，而「心」的點數可以用來在魔界購物，就像人類世界的貨幣一樣功能，而「心」的結晶會被送到「心工場」轉化為魔界的能量。</p>
-								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid "><a href="https://imgur.com/6IyMMff"><img src="https://i.imgur.com/6IyMMff.jpg" title="source: imgur.com" /></a></span>
-										<strong>熱情的愛</strong> 5000點
-									</li>
-									<li class="style2">
-										<span class="icon "><a href="https://imgur.com/XL92NqM"><img src="https://i.imgur.com/XL92NqM.jpg" title="source: imgur.com" /></a></span>
-										<strong>忌妒、黑暗</strong> 30000點
-									</li>
-									<!-- <li class="style3">
+            <!-- Second Section -->
+            <section id="second" class="main special">
+                <header class="major">
+                    <h2>愛心點數</h2>
+                    <p>基於特定感情產生對應顏色的「心」。
+                        <br /> 人類的「心」則會不斷再生，魔法師會將人類對自己產生感情的「心」收集起來，而女王考試便以獲得「心」的累積點數多寡決定女王繼承權。「心」的顏色不同，點數也不同，而「心」的點數可以用來在魔界購物，就像人類世界的貨幣一樣功能，而「心」的結晶會被送到「心工場」轉化為魔界的能量。
+                    </p>
+                </header>
+                <ul class="statistics">
+                    <li class="style1">
+                        <span class="icon solid "><a href="https://imgur.com/6IyMMff"><img src="https://i.imgur.com/6IyMMff.jpg" title="source: imgur.com" /></a></span>
+                        <strong>熱情的愛</strong> 5000點
+                    </li>
+                    <li class="style2">
+                        <span class="icon "><a href="https://imgur.com/XL92NqM"><img src="https://i.imgur.com/XL92NqM.jpg" title="source: imgur.com" /></a></span>
+                        <strong>忌妒、黑暗</strong> 30000點
+                    </li>
+                    <!-- <li class="style3">
 										<span class="icon solid fa-signal"></span>
 										<strong>2,048</strong> Tempus
 									</li> -->
-									<li class="style4">
-										<span class="icon solid "><a href="https://imgur.com/pvCvpsy"><img src="https://i.imgur.com/pvCvpsy.jpg" title="source: imgur.com" /></a></span>
-										<strong>純真的心</strong> 10000點
-									</li>
-									<li class="style5">
-										<span class="icon "><a href="https://imgur.com/GB8iIlq"><img src="https://i.imgur.com/GB8iIlq.jpg" title="source: imgur.com" /></a></span>
-										<strong>女生高興</strong> 500點
-									</li>
-								</ul>
-								<!-- <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p> -->
-								<!-- <footer class="major">
+                    <li class="style4">
+                        <span class="icon solid "><a href="https://imgur.com/pvCvpsy"><img src="https://i.imgur.com/pvCvpsy.jpg" title="source: imgur.com" /></a></span>
+                        <strong>純真的心</strong> 10000點
+                    </li>
+                    <li class="style5">
+                        <span class="icon "><a href="https://imgur.com/GB8iIlq"><img src="https://i.imgur.com/GB8iIlq.jpg" title="source: imgur.com" /></a></span>
+                        <strong>女生高興</strong> 500點
+                    </li>
+                </ul>
+                <!-- <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p> -->
+                <!-- <footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer> -->
-							</section>
+            </section>
 
-						<!-- Get Started -->
-							<!-- <section id="cta" class="main special">
-								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section> -->
+            <!-- Get Started -->
+            <section id="cta" class="main special">
+                <header class="major">
+                    <h2>更多資訊</h2>
+                    <!-- <p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br /> posuere. Nulla massa urna, fermentum eget quam aliquet.</p> -->
+                </header>
+                <footer class="major">
+                    <ul class="actions special">
+                        <li><a href="https://zh.m.wikipedia.org/zh-tw/%E9%AD%94%E7%95%8C%E5%A5%B3%E7%8E%8B%E5%80%99%E8%A3%9C%E7%94%9F" class="button primary">維基百科</a></li>
+                        <li><a href="https://sugar-rune.com/?fbclid=IwAR0jnB_QS_NZFFzbQAXcW3y-V1qjwXOt1NXvAKg_asl3LOAUiBr6Yv1GaaU" class="button">官方網站</a></li>
+                    </ul>
+                </footer>
+            </section>
 
-					</div>
+        </div>
 
-				<!-- Footer
+        <!-- Footer
 					<footer id="footer">
 						<section>
 							<h2>Aliquam sed mauris</h2>
@@ -161,9 +162,9 @@
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer> -->
 
-			</div>
+    </div>
 
-		<!-- Scripts
+    <!-- Scripts
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -172,5 +173,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script> -->
 
-	</body>
+</body>
+
 </html>
